--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "app-name",
   "version": "0.0.1",
   "private": true,
+  "main": "./server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "locomotive": ">= 0.1.0",
-    "express": ">= 2.4.7",
-    "jade": ">= 0.20.1",
+    "locomotive": ">= 0.3.0",
+    "express": ">= 3.0.0",
+    "jade": ">= 0.28.1",
     "passport": ">= 0.1.6",
     "passport-local": ">= 0.1.0",
-    "mongoose": ">= 2.5.7",
-    "mongoose-types": ">= 1.0.3",
+    "passport-facebook": "*",
+    "passport-twitter": "*",
+    "mongoose": ">= 3.6.0",
+    "mongoose-3x-types": "*",
     "locomotive-mongoose": ">= 0.1.0",
     "bcrypt": ">= 0.5.0",
-    "connect-mongodb": ">= 1.1.3"
+    "connect-mongo": "*"
   }
 }
