--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-name",
-  "version": "0.0.1",
+  "name": "ColorAndWonder",
+  "version": "0.0.5",
   "private": true,
   "main": "./server.js",
   "scripts": {
@@ -14,10 +14,17 @@
     "passport-local": ">= 0.1.0",
     "passport-facebook": "*",
     "passport-twitter": "*",
+    "passport-google": "*",
     "mongoose": ">= 3.6.0",
     "mongoose-3x-types": "*",
     "locomotive-mongoose": ">= 0.1.0",
     "bcrypt": ">= 0.5.0",
     "connect-mongo": "*"
+  },
+  "devDependencies":{
+    "mocha": "~1.9",
+    "supertest": "~0.6",
+    "should": "*",
+    "supertest": "*"
   }
 }
